--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "tqdm",
     "torch",
     "click",
+    "pydantic",
+    "tabulate",
     "networkx",
     "python-semantic-release",
     "torch-geometric"
